[build-system]
requires = ["mpi4py", "numpy", "executorlib", "setuptools", "versioneer[toml]==0.29"]
build-backend = "setuptools.build_meta"

[project]
name = "pylammpsmpi"
description = "Parallel Lammps Python interface - control a mpi4py parallel LAMMPS instance from a serial python process or a Jupyter notebook"
authors = [
    { name = "Jan Janssen", email = "janssen@mpie.de" },
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["pyiron"]
requires-python = ">=3.9, <3.13"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mpi4py==4.0.1",
    "executorlib==0.4.3",
    "numpy==1.26.4",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/pyiron/pylammpsmpi"
Documentation = "https://github.com/pyiron/pylammpsmpi"
Repository = "https://github.com/pyiron/pylammpsmpi"

[project.optional-dependencies]
ase = [
    "ase==3.24.0",
    "scipy==1.15.2",
]

[tool.setuptools.packages.find]
include = ["pylammpsmpi*"]

[tool.setuptools.dynamic]
version = {attr = "pylammpsmpi.__version__"}

[tool.ruff]
exclude = [".ci_support", "docs", "notebooks", "setup.py", "_version.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-comprehensions
    "C4",
    # eradicate
    "ERA",
    # pylint
    "PL",
]
ignore = [
    # ignore exception naming
    "B904",
    # ignore line-length violations
    "E501",
    # Too many arguments in function definition
    "PLR0913",
    # Magic value used in comparison
    "PLR2004",
    # Too many branches
    "PLR0912",
    # Too many statements
    "PLR0915",
]

[tool.versioneer]
VCS = "git"
style = "pep440-pre"
versionfile_source = "pylammpsmpi/_version.py"
parentdir_prefix = "pylammpsmpi"
tag_prefix = "pylammpsmpi-"
