[build-system]
requires = ["mpi4py", "numpy", "executorlib", "hatchling==1.27.0", "hatch-vcs==0.5.0"]
build-backend = "hatchling.build"

[project]
name = "pylammpsmpi"
description = "Parallel Lammps Python interface - control a mpi4py parallel LAMMPS instance from a serial python process or a Jupyter notebook"
authors = [
    { name = "Jan Janssen", email = "janssen@mpie.de" },
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["pyiron"]
requires-python = ">=3.9, <3.14"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mpi4py==4.1.1",
    "executorlib==1.7.3",
    "numpy==2.3.4",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/pyiron/pylammpsmpi"
Documentation = "https://github.com/pyiron/pylammpsmpi"
Repository = "https://github.com/pyiron/pylammpsmpi"

[project.optional-dependencies]
ase = [
    "ase==3.26.0",
    "scipy==1.16.3",
]
pyiron = [
    "pyiron_lammps==0.5.0",
]

[tool.hatch.build]
include = [
    "pylammpsmpi"
]

[tool.hatch.build.hooks.vcs]
version-file = "src/pylammpsmpi/_version.py"

[tool.ruff]
exclude = [".ci_support", "docs", "notebooks", "setup.py", "_version.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-comprehensions
    "C4",
    # eradicate
    "ERA",
    # pylint
    "PL",
]
ignore = [
    # ignore exception naming
    "B904",
    # ignore line-length violations
    "E501",
    # Too many arguments in function definition
    "PLR0913",
    # Magic value used in comparison
    "PLR2004",
    # Too many branches
    "PLR0912",
    # Too many statements
    "PLR0915",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/pylammpsmpi"
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/pylammpsmpi"
]

[tool.hatch.version]
source = "vcs"
path = "src/pylammpsmpi/_version.py"

[tool.coverage.run]
source = ["pylammpsmpi"]
command_line = "-m unittest discover tests"
